--- a/paper.tex
+++ b/paper.tex
@@ -36,7 +36,7 @@ Stanley Baak?\inst{3}\orcidID{2222--3333-4444-5555}}
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
-Reachability computations allow for validating safety parameters in various control systems. In this paper we analyze the performance characteristics of successively linearized reachability problems running in realtime. Importantly, we test these running alongside a full suite of autonomous control and localization tools onboard the F1/10 racing platform. A number of runtime modes which utilize single core and multiple core CPU as well as hybridized CPU/GPU were analyzed. In our testing we achieve accurate 10-step reachability as quickly as xxxxx seconds. We find that porting portions of reachability onto the GPU can improve the runtime by xxxx\% and reduces the computational complexity in relation to number of reachability steps.
+Reachability computations allow for validating safety parameters in various control systems. In this paper we analyze the performance characteristics of successively linearized reachability problems running in realtime. Importantly, we test these running alongside a full suite of autonomous control and localization tools onboard the F1/10 racing platform. A number of runtime modes which utilize single core and multiple core CPU as well as hybridized CPU/GPU were analyzed. In our testing we achieve accurate 10-step reachability as quickly as 150 milliseconds. We also find that porting portions of reachability onto the GPU can improve the runtime for 10-step reachability by 62\% over a CPU only implementation and reduces the computational complexity in relation to number of reachability steps.
 
 \keywords{Reachability  \and Safety Analysis \and CUDA }
 \end{abstract}
@@ -44,7 +44,7 @@ Reachability computations allow for validating safety parameters in various cont
 %
 %
 \section{Introduction}
-Reachability is the computation and interpretation of possible future agent states at a time or set of times. Given an agent's current state and a range of possible future inputs, a reachability algorithm outputs information about all possible states of the agent at time T in the future. For computational efficiency and practical use, we discuss discrete-time reachability algorithms. In discrete-time reachability, a range of N possible state spaces are generated for N future times. defined by intervals spaced by the discretization time step, dt. Importantly the generated state spaces are minimal overapproximations of possible states as defined by the agent’s dynamical model. This guarantees that any state actually reached at time T is within the overapproximation boundary and can be utilized for safety analysis.
+Reachability is the computation and interpretation of possible future agent states at a time or set of times. Given an agent's current state and a range of possible future inputs, a reachability algorithm outputs information about all possible states of the agent at time $T$ in the future. For computational efficiency and practical use, we discuss discrete-time reachability algorithms. In discrete-time reachability, a range of $N$ possible state spaces are generated for $N$ future times. defined by intervals spaced by the discretization time step, $dt$. Importantly the generated state spaces are minimal overapproximations of possible states as defined by the agent’s dynamical model. This guarantees that any state actually reached at time $T$ is within the overapproximation boundary and can be utilized for safety analysis.
 
 Safety verification is the overarching goal for reachability computations. With highly reliable systems, it is necessary to verify that no error state could be reached. In autonomous vehicles, error states may involve intersections with walls, other cars or people, etc.. By checking the overapproximation of states, it can be determined if the agent is in danger of reaching an error mode in the future. Planned inputs can then be modified to avoid the danger, preventing potentially catastrophic system failure.
 
@@ -68,7 +68,7 @@ We explore a number of different runtime modes for profiling successively linear
 \vspace*{-5pt}
 
 \subsection{Offline Profiling}
-In offline profiling, reachability is computed as the sole program running on the system. A dedicated testing script executes each of the runtime modes for 200 trials at intervals between 5 to 40 reachability steps. HYLAA is only tested up to 20 steps due to slow performance. The script outputs timing data excluding any one-off setup and configuration code.
+In offline profiling, reachability is computed as the sole program running on the system. A dedicated testing script executes each of the runtime modes for 200 trials at intervals between 4 and 24 reachability steps. HYLAA is only tested over 5 trials due to slow performance. The script outputs timing data excluding any one-off setup and configuration code.
 \subsection{Online Profiling}
 In online profiling, reachability is computed as part of a ROS network running physical control nodes (controller input, motor and servo control, etc..), a GPU based particle filter node for localization, a model predictive control node, and various other supporting nodes. Before beginning the profiling, the vehicle is placed into the test track, localized and configured to autonomously drive the track until profiling is complete. The reachability node is implemented as a wrapper for separate reachability classes (those called by the offline profiler) and records call timings for the same function, executing as quickly as possible. The online profiler is configured to automatically switch between runtimes modes and number of reachability steps. This occurs for the same parameters as in offline profiling except only those configurations executing at least 4hz (<=250ms per trial) are considered. HYLAA is not tested in this profiling due to slow performance.
 \subsection{Performance Characteristics}
@@ -76,7 +76,7 @@ There are a number of important characteristics needed to describe the performan
 
 Correctness is the assuredness that the outputs are a valid solution to the problem. It is important to know that the algorithm is producing results consistent with the desired output and underlying mathematics. This is especially important for a reachability algorithm which is utilized in safety analysis protocols.
 
-Scalability is how well the algorithm scales with increased problem size. In our case, problem size is dictated by the number of time steps. This corresponds to either or both of an increase in horizon or decrease discretization time step. Horizon (sec) = \#time-step * time-step. It is important to understand how the algorithm scales so intelligent decisions can be made about optimal horizon and precision in real time applications.
+Scalability is how well the algorithm scales with increased problem size. In our case, problem size is dictated by the number of time steps. This corresponds to either or both of an increase in horizon or decrease discretization time step. $T$ = $N\cdot dt$. It is important to understand how the algorithm scales so intelligent decisions can be made about optimal horizon and precision in real time applications.
 
 Runtime is the time to solve the given problem. Minimizing runtime is a critical component of this research. Running a real time safety algorithm is only effective when there is a low latency between consecutive executions. If this criteria is not met, safety analysis could be out of date when the agent is developing a response, resulting in ineffective performance. In contrast, low latency [runtime] will improve the safety margin of the agent by providing reachability information to the controller which is very up to date with the environment.
 
@@ -88,11 +88,11 @@ Each characteristic has an empirical measure which we can use to analyze it quan
 
 To validate correctness, we used HYLAA model output, assuming that HYLAA is mathematically consistent. Outputs from other runtime modes are compared to the HYLAA output to determine if there are any significant differences. It is not necessary to validate correctness separately for online and offline computation since the same code is executed in each case.
 
-To validate scalability, each runtime model is tested with a range of values for the number of reachability steps which are representative of useful workloads. The number of steps (N) is equal to the ratio between total horizon time in seconds (T) and the discretization time-step (dt). This varying of step values is done for both online and offline modes. However, for online trials, only models capable of running around 200ms per iteration (5hz) are considered.
+To validate scalability, each runtime model is tested with a range of values for the number of reachability steps which are representative of useful workloads. The number of steps, $N$ is equal to the ratio between total horizon time in seconds, $T$ and the discretization time-step $dt$. This varying of step values is done for both online and offline modes. However, for online trials, only models capable of running around 250ms per iteration (4hz) are considered.
 
 To test runtime, each combination of runtime mode and steps is evaluated over multiple trials. The recorded runtimes will be the average over 200 trials. This data collection is done for both online and offline testing.
 
-To test runtime variability, the all recorded runtimes from all trials are analyzed. We compute standard deviation in runtime and 95% runtime confidence intervals around the mean assuming normally distributed variation in runtimes. This analysis is performed for both online and offline testing.
+To test runtime variability, the all recorded runtimes from all trials are analyzed. We compute standard deviation in runtime and 95\% runtime confidence intervals around the mean assuming normally distributed variation in runtimes. This analysis is performed for both online and offline testing.
 
 Some other values are also collected for the benefit of running analysis. 
 What is a trial? One execution of the reachability computation.  
@@ -101,12 +101,17 @@ What is a trial? One execution of the reachability computation.
 \section{Results}
 
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{profiler_out/all_avg_unified.png}
-\caption{Average trial execution times for all runtime modes in online and offline configuration.} \label{fig1}
+\includegraphics[width=\textwidth]{profiler_out/offline_avg_unified.png}
+\caption{Average Offline trial execution times for all runtime modes.} \label{offline_avg}
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics[width=\textwidth]{profiler_out/online_avg_unified.png}
+\caption{Average Online trial execution times for all runtime modes.} \label{online_avg}
 \end{figure}
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{profiler_out/all_avg_unified.png}
-\caption{Average trial execution times for all runtime modes in online and offline configuration.} \label{fig1}
+\includegraphics[width=\textwidth]{profiler_out/avg_mp_hybrid_CI.png}
+\caption{Comparison between Multiprocessing and Hybridized online and offline runtimes.} \label{mp_hybrid_ci}
 \end{figure}
 \begin{figure}[H]
     \subcaptionbox{Detail of the Quickzono GPU Hybrid runtimes with 95\% confidence intervals.\label{CPU_CI}}{\includegraphics[width=.5\linewidth]{profiler_out/avg_QZ-CPU_CI.png} }
@@ -121,6 +126,12 @@ What is a trial? One execution of the reachability computation.
 
 \section{Discussion}
 
+For offline timings, modes QZ\_CPU and QZ\_HYBRID \ref{offline_avg} show a pattern of exponential style growth. QZ\_DUMMY breaks this trend as we would expect since it is not doing meaningful computations for the zonotope projection algorithm which is the primary source of computational complexity. There is a reduction in runtime from CPU mode to QZ\_MP and QZ\_HYBRID modes indicating a that attempts at parallelization by various methods had useful impacts on the algorithms speed.
+
+Both QZ\_HYBRID and QZ\_MP are capable of running realtime reachability effectively. 
+
+Online execution times show less clear patterns since it is harder to infer from the fewer data points collected. 
+
 %
 % ---- Bibliography ----
 %
@@ -134,13 +145,22 @@ What is a trial? One execution of the reachability computation.
 
 
 \bibitem{ref_hylaa}
-HYLAA Author, F., Author, S.: Title of a proceedings paper. In: Editor,
-F., Editor, S. (eds.) CONFERENCE 2016, LNCS, vol. 9999, pp. 1--13.
-Springer, Heidelberg (2016). \doi{10.10007/1234567890}
+Bak S., Sridhar Duggirala P.: HyLAA: A Tool for Computing Simulation-Equivalent Reachability for Linear Systems. In: Editor,
+Proceedings of the 20th International Conference on Hybrid Systems: Computation and Control 2017
 
+%@article{Bak2017HyLAAAT,
+%  title={HyLAA: A Tool for Computing Simulation-Equivalent Reachability for Linear Systems},
+%  author={Stanley Bak and Parasara Sridhar Duggirala},
+%  journal={Proceedings of the 20th International Conference on Hybrid Systems: Computation and Control},
+%  year={2017}
+%}
 \bibitem{ref_oder}
-ODER Author, F., Author, S., Author, T.: Book title. 2nd edn. Publisher,
-Location (1999)
+Maler O.: Computing Reachable Sets : An Introduction. 2008
+%@inproceedings{Maler2008ComputingRS,
+%  title={Computing Reachable Sets : An Introduction},
+%  author={O. Maler},
+%  year={2008}
+%}
 
 \end{thebibliography}
 \end{document}
